force-app/main/default/objects/QuoteLineItem/fields/DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT__c</fullName>
    <label>DISCOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>