force-app/main/default/objects/QuoteLineItem/fields/EXPENSES__c.field-meta.xml
<CustomField>
    <fullName>EXPENSES__c</fullName>
    <label>EXPENSES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>