force-app/main/default/objects/QuoteLineItem/fields/MARGIN__c.field-meta.xml
<CustomField>
    <fullName>MARGIN__c</fullName>
    <label>MARGIN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>