force-app/main/default/objects/QuoteLineItem/fields/NET_PRICE__c.field-meta.xml
<CustomField>
    <fullName>NET_PRICE__c</fullName>
    <formula>Quantity  * UNIT_PRICE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NET PRICE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>