force-app/main/default/objects/QuoteLineItem/fields/UNIT_COST__c.field-meta.xml
<CustomField>
    <fullName>UNIT_COST__c</fullName>
    <label>UNIT COST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>