force-app/main/default/objects/QuoteLineItem/fields/UNIT_PRICE__c.field-meta.xml
<CustomField>
    <fullName>UNIT_PRICE__c</fullName>
    <label>UNIT PRICE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>